--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     list-style: none;
 }
+body{
+    background-color: aliceblue;
+}
 h1{
     display: flex;
     justify-content: center;
@@ -52,9 +55,61 @@ nav li:hover{
     position: relative;
     width: 60%;
     bottom: 450px;
-    right: 70px;
+    right: 55px;
     font-size: 40px;
     font-weight: 700;
     color: white;
-    text-shadow: 40px 30px 30px #58ACFA;
 }
+main{
+    height: 100%;
+}
+.ada img{
+    width: 20vw ;
+          
+}
+.ada{
+    position: absolute;
+    z-index: 20;
+    top: 48%;
+    left: 15%;
+    
+}
+@media(max-width:600px){
+   .ada{
+       top: 88.5%;
+       left: 2%;
+   } 
+}
+
+.ada:hover{
+    opacity: 70%;
+    cursor:grab;
+}
+.section1{
+   
+    display: flex;
+    position: relative;
+}
+.middle figure{
+    width: 40vw;
+}
+.rey{
+    position: absolute;
+    display: flex;
+    left: 73.3%;
+    top: 51.2%;
+    z-index: 30;    
+}
+.rey :hover{
+    opacity: 90%;
+    cursor:grab;
+}
+.rey img{
+    width: 20vw;
+}
+@media(max-width:600px){
+    .rey{
+        top: 88.5%;
+        right: 30%;
+    } 
+ }
