--- a/style.css
+++ b/style.css
@@ -7,44 +7,71 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     list-style: none;
 }
-header{
-    border:black;
-    height: 100vh;
+.cabeca{
+    height: 20vh;
     width: 100%;
+    padding:2vh;
+}
+.menu {
+    width: 40%;
+    height: 15%;
+    margin-top:5vh;
+    color:skyblue;
+    justify-content: flex-end;
+    display:flex;
+    left:5vw;
+
+}
+.van{
+    display: flex;
+    border:solid;
+    height: 4vw;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.35vw;
+    font-family:'Permanent Marker', cursive;
+    margin-top:-18%;
 }
 
-a {
+a{
     text-decoration: none;
 }
-.titulo{
-    border:solid aquamarine;
-    font-family: 'Permanent Marker', cursive;
-    font-weight:300;
-    display: flex;
-    justify-content: center;
-    width: 40vw;
-    font-size: 40px;
+  a:visited {
+    color: darkslateblue;
+}
+.van li{
+    border:solid;
     color: skyblue;
-    margin-top:1vh;
-    padding: 3vh;
+    left:4;
+}
+.menu li:hover {
+    color:lightcoral;
+    font-family:'Permanent Marker', cursive;
+    font-weight: 900;
+    cursor: pointer;
+    transform: translateX(5px);
+}
+.corpo{
+    border:solid gold;
+    height: 150vh;
+    position:relative;  
+}
+.titulo{
+    display:flex;
+    justify-content: center;
+    width: 30vw;
+    height: 15vh;
+    border:solid black;
+    font-family:'Permanent Marker';
+    font-weight: 200px;
+    color: skyblue;
 }
 .titulo:hover{
     cursor:pointer;
     color:lightcoral;
-    text-shadow: 40px 30px 30px lightsalmon;
-}
-main{
-    border:solid gold;
-    height: 100%;  
-}
-.introduction img{
-    height: 90%;
-    width: 100%;
-    border:solid tomato;
-    margin-top:-13vh;
 }
 .textmain{
     border:solid pink;
@@ -60,66 +87,14 @@ main{
 }
 .textada{
     border:solid hotpink; 
-}
-.texthome{
-    position: absolute;
-    top: 78%;
-    left: 41.7%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 45%;
-    height: 45%;
-    border:solid darkblue;
-
-}
-.enfeite{
-    display: flex;
     position:relative;
 }
-.bloquinhos1{
-    display: flex;
-     position: absolute;
-     top: 9px;
-     z-index: 8;
-     left:1%;
-     width: 8vw;
-     height: 8vw;
-     background-color: blue;
-     background-repeat: no-repeat;
-     background-size: cover;
-     box-shadow: 1px 5px 40px 4px rgb(87, 73, 100);
-     border:blue;
-     border-radius: 15px;
+.texthome{
+    height: 10vh;
+    width: 50vw;
+    border:darkblue;
 }
-.bloquinhos2{
-    display: flex;
-     position: absolute;
-     top: 50px;
-     z-index:15;
-     left:5%;
-     width: 8vw;
-     height: 8vw;
-     background-color: orange;
-     background-repeat: no-repeat;
-     background-size: cover;
-     border:orange;
-     border-radius: 15px;
-}
-.bloquinhos3{
-    display: flex;
-     position: absolute;
-     top:30px;
-     z-index: 10;
-     left:3%;
-     width: 8vw;
-     height: 8vw;
-     background-color:lightcoral ;
-     background-repeat: no-repeat;
-     background-size: cover;
-     border:lightcoral;
-     border-radius: 15px;
-}
+
 .red-section{
     display: flex;
     justify-content: space-around;
@@ -129,7 +104,7 @@ main{
  .red-box{
      display: flex;
      position: absolute;
-     top:192%;
+     top:12%;
      z-index: 20;
      left: 8%;
      width: 21vw;
@@ -138,134 +113,71 @@ main{
      background-repeat: no-repeat;
      background-size: cover;
      border-radius: 20px;
- }
- .red-content{
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-    position: absolute;
-    top: 70%;
-    left: 80%;
-    width: 100%;
-    height: 18vh;
-}
-.content1{
-        font-size: 80px;
-        color: #fff;
-        text-align: center;
-        -webkit-animation: glow 1s ease-in-out infinite alternate;
-        -moz-animation: glow 1s ease-in-out infinite alternate;
-        animation: glow 1s ease-in-out infinite alternate;
-      }
-      
-@keyframes glow {
-        from {text-shadow: 0 0 10px lightcoral, 0 0 20px lightcoral, 0 0 30px lightcoral, 0 0 40px lightcoral, 0 0 50px lightcoral, 0 0 60px lightcoral, 0 0 70px lightcoral;
-        }
-        to {text-shadow: 0 0 20px lightcoral, 0 0 30px lightcoral, 0 0 40px lightcoral, 0 0 50px lightcoral, 0 0 60px lightcoral, 0 0 70px lightcoral, 0 0 80px lightcoral;
-        }
-    }
-.content1{
-    color: white;
-    box-shadow:gradient;
-    font-weight: lighter;
-    font-size: 10vw;
-    font-family: 'Dancing Script', cursive;
-    z-index:5;
 }
 
-.slideshow {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    z-index: 3; /*retirar*/
-    border: firebrick;
-  }
-  
-  /** SLIDESHOW **/
-  .slide{
-    width: 50%;
-    height: 60%;
-    margin-top: 80vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    left:4vw;
-  border-radius: 10px;  
-}
-  .slideshow,
-  .slideshow:after { 
-      position:relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      left: 0px;
-      z-index: 3;
-      border-radius: 10px;  
-  }
-  
-  .slideshow li span { 
-      position: absolute;
-      width: 90%;
-      height: 100%;
-      top: 0px;
-      left: 5%;
-      color: transparent;
-      background-size: cover;
-      background-position: 50% 50%;
-      background-repeat: no-repeat;
-      opacity: 0;
-      z-index: 0;
-      animation: imageAnimation 60s linear infinite 0s;
-      border-radius: 10px;  
- }
-  
-   
-  .slideshow li:nth-child(1) span { 
-      background-image: url("/images/primeira-programadora.jpg"); 
-      animation-delay: 2s; 
-    }
-  .slideshow li:nth-child(2) span { 
-      background-image: url("./images/cover.jpg");
-      animation-delay: 2s; 
-  }
-  .slideshow li:nth-child(3) span { 
-      background-image: url("./images/i428465.jpeg");
-      animation-delay: 2s; 
-  }
-  
-  @keyframes imageAnimation { 
-      0% { opacity: 0; animation-timing-function: ease-in; }
-      8% { opacity: 1; animation-timing-function: ease-out; }
-      17% { opacity: 1 }
-  }
-  
-  
-  @keyframes titleAnimation { 
-      0% { opacity: 0 }
-      8% { opacity: 1 }
-      17% { opacity: 1 }
-  }
-  
-  
-  .no-cssanimations .cb-slideshow li span {
-      opacity: 1;
-  }
-  
+
 .partedebaixo{
     display: flex;
-    position: relative;
-    height: 110vw;
+    position: absolute;
+    height: 50vw;
     width: 100%;
     border:solid darkgray;
     /*background-color:#2D2D2D;*/
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 footer{
-    border:solid;
+    background-color: rgb(242, 243, 244 );
+    height: 19vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+h2{
+    font-size: 4vh;
+    color:lightcoral;
+}    
+.footer-main {
+        width: 90%;
+        height: 19vh;
+        padding: 0 5vw;
+        display: flex;
+        align-items: center;
+}
+    
+.redes-sociais {
+        width: 30%;
+        display: flex;
+        justify-content: space-evenly;
+}
+    
+.redes-sociais img {
+        height: 10vh;
+        width: -2vw;
+    }
+    
+.footer-main h2 {
+        padding-left: 30vw;
+    }
+    
+.ref{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2vw;
+}
+.ref p{
+    font-size: 2vh;
+    left:4vw
+}
+    
+.footer-media {
+        display: none;
+}
+.ref {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2vw;
+}
+
+.footer-media {
+    display: none;
 }
