--- a/style.css
+++ b/style.css
@@ -9,61 +9,98 @@
     box-sizing: border-box;
     list-style: none;
 }
-.cabeca{
-    height: 20vh;
-    width: 100%;
-    padding:2vh;
-}
-.menu {
-    width: 40%;
-    height: 15%;
-    margin-top:5vh;
-    color:skyblue;
-    justify-content: flex-end;
-    display:flex;
-    left:5vw;
 
-}
-.van{
+header{
     display: flex;
-    border:solid;
-    height: 4vw;
-    width: 100%;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
-    font-size: 1.35vw;
+    height: 10%;
+    width: 100%;
+    border:solid;
+}
+
+.title {
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+    font-weight: 400px;
     font-family:'Permanent Marker', cursive;
-    margin-top:-18%;
+    color:lightcoral;
+}
+
+.title:hover{
+    color:skyblue;
+    font-family:'Permanent Marker', cursive;
+    cursor: pointer;
+}
+
+nav{
+    width: 42%;
+    font-family:'Permanent Marker', cursive;
+}
+  
+ul{
+    display: flex;
+    justify-content: space-around;
+    color: grey;
+    list-style: none;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+li{
+    color:skyblue;
+}
+
+li:hover {
+    color:lightcoral;
+    font-family:'Permanent Marker', cursive;
+    cursor: pointer;
+    transform: translateX(8px);
 }
 
 a{
     text-decoration: none;
 }
-  a:visited {
+
+a:visited {
     color: darkslateblue;
 }
-.van li{
-    border:solid;
-    color: skyblue;
-    left:4;
-}
-.menu li:hover {
-    color:lightcoral;
-    font-family:'Permanent Marker', cursive;
-    font-weight: 900;
-    cursor: pointer;
-    transform: translateX(5px);
+.introduction img{
+    height: 75%;
+    width: 100%;
 }
 .corpo{
     border:solid gold;
     height: 150vh;
     position:relative;  
 }
-.titulo{
+.titlemain{
+    display:flex;
+    justify-content: center;
+    width:22%;
+    margin-top: -2vh;
+    font-family:'Permanent Marker', cursive;
+    font-weight: 100;
+    font-size:2.5vw;
+    color:#049FBB;
+    text-shadow: 2px 2px #FFAB91;
+    border:solid green;
+}
+.textmain{
+    width: 70%;
+    height: 70vh;
+    font-size:2vw;
+    color:#000000;
+    padding-right:7vw;
+    margin-left: 32vw;
+    text-align: justify;
+}
+/*.titulo{
     display:flex;
     justify-content: center;
     width: 30vw;
-    height: 15vh;
+   height: 15vh;
     border:solid black;
     font-family:'Permanent Marker';
     font-weight: 200px;
@@ -72,8 +109,8 @@ a{
 .titulo:hover{
     cursor:pointer;
     color:lightcoral;
-}
-.textmain{
+}*/
+/*..textmain{
     border:solid pink;
     font-family: 'Permanent Marker', cursive;
     color:#58ACFA;
@@ -93,7 +130,7 @@ a{
     height: 10vh;
     width: 50vw;
     border:darkblue;
-}
+}*/
 
 .red-section{
     display: flex;
