--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -14,9 +15,8 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10%;
+    height: 15vh;
     width: 100%;
-    border:solid;
 }
 
 .title {
@@ -70,30 +70,39 @@ a:visited {
     height: 75%;
     width: 100%;
 }
-.corpo{
-    border:solid gold;
-    height: 150vh;
-    position:relative;  
+main{
+    width:100%;
+    position:relative;
+}
+.aquarela{
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    height: 80vh;
+    margin-top: 1vh;
 }
 .titlemain{
     display:flex;
-    justify-content: center;
-    width:22%;
-    margin-top: -2vh;
+    width:15%;
+    height: 10vh;
+    margin-top: 4vh;
     font-family:'Permanent Marker', cursive;
     font-weight: 100;
-    font-size:2.5vw;
+    font-size:3vw;
     color:#049FBB;
     text-shadow: 2px 2px #FFAB91;
-    border:solid green;
 }
 .textmain{
-    width: 70%;
-    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left:32vh;
+    margin-top: 16vh;
+    width: 60%;
+    height: 60vh;
     font-size:2vw;
+    font-family: 'Hubballi', cursive;
     color:#000000;
-    padding-right:7vw;
-    margin-left: 32vw;
     text-align: justify;
 }
 /*.titulo{
@@ -139,82 +148,201 @@ a:visited {
  }
  
  .red-box{
-     display: flex;
-     position: absolute;
-     top:12%;
-     z-index: 20;
-     left: 8%;
-     width: 21vw;
-     height: 28vw;
-     background-image: url(./images/Ada-l-3-e1587696726933.jpg);
-     background-repeat: no-repeat;
-     background-size: cover;
-     border-radius: 20px;
+    display: flex;
+    position: absolute;
+    top:18%;
+    z-index: 20;
+    left: 10%;
+    width: 19vw;
+    height: 26vw;
+    background-image: url(./images/Ada-l-3-e1587696726933.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    box-shadow: #F07F54 0px 2px 4px, #F07F54 0px 7px 13px -3px, #F07F54 0px -3px 0px inset;
+}
+.bloquinho1{
+    display: flex;
+    position: absolute;
+    top:14.5%;
+    z-index: 20;
+    left: 6vw;
+    width: 18vw;
+    height: 5vw;
+    background-color: #E3511A ;
+    border-radius: 20px;
+
+}
+.bloquinho2{
+    display: flex;
+    position: absolute;
+    top:13%;
+    left: 5vw;
+    width: 18vw;
+    height: 5vw;
+    background-color:rgb(102, 69, 167);
+    border-radius: 20px;
+
+}
+.bloquinho3{
+    display: flex;
+    position: absolute;
+    top:16%;
+    z-index: 20;
+    left: 7vw;
+    width: 18vw;
+    height: 5vw;
+    background-color:lightcoral;
+    border-radius: 20px;
 }
 
 
 .partedebaixo{
-    display: flex;
-    position: absolute;
-    height: 50vw;
-    width: 100%;
-    border:solid darkgray;
+    display:flex;
+    position:relative;
+    width:100%;
+    height:100vh;
+    border:solid red;
     /*background-color:#2D2D2D;*/
 }
-footer{
-    background-color: rgb(242, 243, 244 );
-    height: 19vh;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
-h2{
-    font-size: 4vh;
-    color:lightcoral;
-}    
-.footer-main {
-        width: 90%;
-        height: 19vh;
-        padding: 0 5vw;
-        display: flex;
-        align-items: center;
-}
-    
-.redes-sociais {
-        width: 30%;
-        display: flex;
-        justify-content: space-evenly;
-}
-    
-.redes-sociais img {
-        height: 10vh;
-        width: -2vw;
-    }
-    
-.footer-main h2 {
-        padding-left: 30vw;
-    }
-    
-.ref{
-        display: flex;
-        flex-direction: column;
-        padding-left: 2vw;
-}
-.ref p{
-    font-size: 2vh;
-    left:4vw
-}
-    
-.footer-media {
-        display: none;
-}
-.ref {
+.glow {
     display: flex;
+    position: absolute;
+    top:76%;
+    z-index: 20;
+    left: 55vw;
+    width: 18vw;
+    font-size:9.5vw;
+    font-family: 'Dancing Script', cursive;
+    color: #fff;
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+  }
+  
+  @-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+  }
+
+.slideshow {
+    list-style-type: none;
+  }
+  
+  /** SLIDESHOW **/
+  .slideshow,
+  .slideshow:after {
+    display:flex;
+    top: 20vh;
+    position:relative;
+    width: 80%;
+    height: 90vh;
+    left: 4vh;
+    z-index: 0;
+}
+  
+  .slideshow li span { 
+    position: absolute;
+    width: 60%;
+    height: 80%;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size:cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    opacity: 0;
+    z-index: 0;
+    border-radius: 20px;
+    animation: imageAnimation 30s linear infinite 0s; 
+  }
+  
+  
+  .slideshow li:nth-child(1) span { 
+      background-image: url(./images/slide.jpg); 
+  }
+  .slideshow li:nth-child(2) span { 
+      background-image: url(./images/slide1.jpg);
+      animation-delay: 6s; 
+  }
+  .slideshow li:nth-child(3) span { 
+      background-image: url(./images/slide2.jpeg);
+      animation-delay: 12s; 
+  }
+  .slideshow li:nth-child(4) span { 
+      background-image: url(./images/slide3.jpg);   
+      animation-delay: 18s; 
+  }
+  .slideshow li:nth-child(5) span { 
+      background-image: url(./images/Slide0.jpeg);
+      animation-delay: 24s; 
+  }
+  
+  
+  
+  @keyframes imageAnimation { 
+      0% { opacity: 0; animation-timing-function: ease-in; }
+      8% { opacity: 1; animation-timing-function: ease-out; }
+      17% { opacity: 1 }
+      25% { opacity: 0 }
+      100% { opacity: 0 }
+  }
+  
+  
+  @keyframes titleAnimation { 
+      0% { opacity: 0 }
+      8% { opacity: 1 }
+      17% { opacity: 1 }
+      19% { opacity: 0 }
+      100% { opacity: 0 }
+  }
+  
+  
+  .no-cssanimations .cb-slideshow li span {
+      opacity: 1;
+  }
+
+.textunder{
+    width: 40%;
+    position: absolute;
+    top: 24%;
+    left: 30%;
+    display: flex;
+    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
-    padding-left: 2vw;
+    height: 12%;
 }
 
-.footer-media {
-    display: none;
-}
+
+footer{ 
+    display: flex;
+    flex-wrap: wrap;
+    background-color: gainsboro;
+  }
+  
+  .icons {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 5%;
+    margin: 3%;
+    width: 45%;
+  }
+  .icons:hover{
+    color: darkorange;
+    cursor: pointer;
+  
+  }
+  .text2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 12px;
+    width: 49%;
+  }
+  
